# sensor-monitor-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  Logger.cpp  Logger.hpp  Monitor.cpp  Monitor.hpp  Sensor.cpp  Sensor.hpp  WebAPI.cpp  WebAPI.hpp  main.cpp
tests/: CMakeLists.txt  test_sensor.cpp
